5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1756_1183.log
== TEST (2019-05-21 20:28:59) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=zeros(n)
while(i<size(n)):
	if(n>=0):
		j=j+1
	else:
		j=j+0
	i=i+1
	m=m+j
print(m)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:29:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n>=0):
		j=j+1
	else:
		j=j+0
	i=i+1
	m=m+j
print(m)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:30:27) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n>0):
		j=j+1
	else:
		j=j+0
	i=i+1
	m=m+j
print(m)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:22:49) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
y=()
while(i<size(n)):
	if(n[i]>0):
		y = y + n[i]
	else:
		j=j+0
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:23:02) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
y=()
while(i<size(n)):
	if(n[i]>0):
		y = y + n[i]
	else:
		j=j+0
	i=i+1

	ptint(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:23:11) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
y=()
while(i<size(n)):
	if(n[i]>0):
		y = y + n[i]
	else:
		j=j+0
	i=i+1

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:25:48) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
y=()
while(i<size(n)):
	if(n[i]>0):
		y.append(n[i])
	else:
		j=j+0
	i=i+1

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:26:12) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
y=[]
while(i<size(n)):
	if(n[i]>0):
		y.append(n[i])
	else:
		j=j+0
	i=i+1

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:32:28) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]<0):
		j=j+1
	i=i+1

po = array(j)
p[i] = n[j]-po[j]

	
print(po)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:33:05) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]<0):
		j=j+1
	i=i+1

po = array(j)
p[i] = n[j]-po[j]

	
print(po)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:38:55) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
		v[m]=n[i]
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:39:11) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
		v[m]=n[i]
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:39:51) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:40:05) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:41:18) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:43:46) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:44:04) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 20:44:16) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
print(v)
		
-- EXECUTION TIME:
1.22287
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[5. 0. 0.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[25.  0.  0.  0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:45:25) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]<=0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:46:20) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 20:47:02) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
		
-- EXECUTION TIME:
382.741
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:47:49) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 20:48:46) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- EXECUTION TIME:
0.512169
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 15, in <module>
    v[j]=n[i]
IndexError: index 10 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:48:47) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:50:07) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
print(v[j])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:50:20) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
print(v[j])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:50:55) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	v=v[j]+v[j]
print(v[j])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:51:13) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	v=v+v[j]
print(v[j])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:51:28) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	v=v+v[j]
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:54:13) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=-1
while(i<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j-1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:54:45) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(n)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:55:06) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:55:40) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:55:51) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:57:43) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:57:56) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:59:09) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0

v=zeros(j)
j=0
while(i<size(n)):
	if(n[i]<0):
		j=j+1
	i=i+1
	
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:59:29) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
v=zeros(j)
while(i<size(n)):
	if(n[i]<0):
		j=j+1
	i=i+1
	
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:01:10) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
h=zeros(j)
while(i<size(n)):
	if(n[i]<0):
		h[j]=n[i]
	i=i+1
	j=j+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:01:33) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
h=zeros(j)
while(i<size(n)):
	if(n[i]<0):
		h[j]=n[i]
	i=i+1
	j=j+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:01:49) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
h=zeros(j)
while(i<size(n)):
	if(n[i]<0):
		h[j]=n[i]
	i=i+1
	j=j+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:02:16) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:02:47) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
	else:
		j=j+0
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:03:32) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
	else:
		j=j+0
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		v[j]=v[]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
File "XXXX", line 19
    v[j]=v[]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:03:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
	else:
		j=j+0
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		v[j]=v[j]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:05:37) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
		
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:05:46) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
		
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- EXECUTION TIME:
0.517086
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 0. 3.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[ 0. 18. 32. 14.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:05:47) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
		
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:08:12) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
		
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:08:24) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
		
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:10:52) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1	
	i=i+1
i=0
v=zeros(j)
m=0
while(m<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	m=m+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:11:18) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1	
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:12:52) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1	
	i=i+1
i=0
v=zeros(j)
j=-1
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:13:23) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1	
	i=i+1
i=0
v=zeros(j)
j=-1
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:13:38) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1	
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:13:50) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1	
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:16:29) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
		v[j]=n[i]
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:16:41) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:16:49) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:20:55) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		v[j]=n[:i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:21:06) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		v[j]=n[:i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:21:33) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:23:59) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	i=i+1
	else:
		v[j]=n[i]
	
	j=j+1
print(v)
		
-- ERROR:
File "XXXX", line 17
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:24:09) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	else:
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:24:29) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<=size(v)):
	if(n[i]>0):
		v[j]=n[i]
	
	else:
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:24:51) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	

	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:25:04) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	

	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:29:28) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		i=i+1
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:29:35) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		i=i+1
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:29:55) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		i=i+1
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- EXECUTION TIME:
0.534314
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[-2.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:30:01) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		i=i+1
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:30:31) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		i=i+1
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:32:10) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		i=i+1
		v[j]=n[i]
	
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:35:16) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<0):
		i=i+1
		if(n[i]>0):
			v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
File "XXXX", line 18
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:36:27) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:36:33) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:36:45) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- EXECUTION TIME:
0.463018
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:36:49) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:37:13) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:37:42) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<=0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:37:56) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<=0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- EXECUTION TIME:
0.594315
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:38:04) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>0):
		v[j]=n[i]
	else:
		while(n[i]<=0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:38:34) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
File "XXXX", line 17
    while(n[i]<):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:38:48) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:38:54) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- EXECUTION TIME:
0.471747
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:38:56) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:40:41) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype=int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:40:49) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype=int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- EXECUTION TIME:
0.526548
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:48:51) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype=int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:41) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype=int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:49:44) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype=int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- EXECUTION TIME:
0.335957
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:45) 
-- CODE:
from numpy import*
n=array(eval(input("numeros interios:")))
i=0
j=0

while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype=int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
